[package]
name = "rust-request-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["blocking"] }
simple_logger = "2.3.0"
