[package]
name = "b-rust-utils"
version = "0.1.0"
edition = "2021"
description = "A set of utilities written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
log = "0.4.17"
prettytable = "0.10.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
simple_logger = "2.3.0"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
